openshift/dev/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: f343b4-dev
spec:
  selector:
    app: name-selector-tool
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
